Amend surefire plugin configuration to make builds repeatable
This change to surefire configuration attempts to implement a forking
strategy which reuses forked JVMs and allocated more Xmx memory to the
forked JVMs. This may help with the intermittent build failures being
seen.