@@ -97,6 +97,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <testSourceDirectory>/src/test/java/</testSourceDirectory>
                 </configuration>
             </plugin>
